# tino

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml  docker.yaml  release.yaml
src/: cli.rs  main.rs  signals.rs
src/platform/: mod.rs  stub.rs  unix.rs
src/platform/unix/: child.rs  mod.rs  signals.rs
tests/: unix_behaviour.rs
