[package]
name = "tino"
description = "💡tino – a tiny init process written in Rust"
version = "0.1.7"
edition = "2024"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
repository = "https://github.com/lvillis/tino"
homepage = "https://github.com/lvillis/tino"
documentation = "https://github.com/lvillis/tino/blob/main/README.md"
exclude = [
  "/docs/",
  "/tests/",
  "/.config/",
  "/.github/",
  "/.justfile",
  "/rust-toolchain.toml",
  "/.gitignore",
  ".editorconfig",
  ".gitattributes",
  "CHANGELOG.md",
  "AGENTS.md"
]

[dependencies]
clap = { version = "4.5.51", default-features = false, features = ["std", "help", "usage", "derive"] }
anyhow = { version = "1.0.100", default-features = false }
libc = { version = "0.2.177" }
nix = { version = "0.30.1", default-features = false, features = ["process", "signal", "poll"] }
once_cell = { version = "1.21.3" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "env-filter", "std"] }

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 1

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
